--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*
+{
+    margin: 0px;
+    padding: 0px;
+}
+
 #etchSketch
 {
     display: flex;
@@ -6,8 +12,8 @@
     border-width: 1px;
     border-color: black;
     border-style: solid;
-    
-    
+    justify-content: stretch;
+    align-items: stretch;
 }
 
 #center
@@ -16,4 +22,9 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+}
+
+.cell
+{
+    flex-grow: 1;
 }
