--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@
 {
     margin: 0px;
     padding: 0px;
+    
 }
 
 #etchSketch
 {
     display: flex;
+    flex-direction: column;
     height: 80vh;
     width: 80vh;
     border-width: 1px;
@@ -24,7 +26,14 @@
     height: 100vh;
 }
 
-.cell
+.row
+{
+    display: flex;
+    justify-content: stretch;
+    align-items: stretch;
+}
+
+.cell, .row
 {
     flex-grow: 1;
 }
